--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <meta charset="utf-8"/>
         <title>PR</title>
         <style>
@@ -26,6 +35,14 @@
     </head>
     <body>
         <h1>PR</h1>
-        <div>Price tracking robot.</div>
+        <div>Price tracking bot</div>
+        <div style="margin-top: 50px;">
+        <form class="form-inline" method="POST" action="/p" target="_blank">
+          <div class="form-group">
+            <input type="email" class="form-control" id="k" placeholder="Product URL" name="q">
+          </div>
+          <button type="submit" class="btn btn-default">Go</button>
+        </form>
+        </div>
     </body>
 </html>
