stag1 api done, next is prices

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -37,12 +37,7 @@
         <h1>PR</h1>
         <div>Price tracking bot</div>
         <div style="margin-top: 50px;">
-        <form class="form-inline" method="POST" action="/p" target="_blank">
-          <div class="form-group">
-            <input type="email" class="form-control" id="k" placeholder="Product URL" name="q">
-          </div>
-          <button type="submit" class="btn btn-default">Go</button>
-        </form>
+        <?php echo $desc; ?>
         </div>
     </body>
 </html>
